--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url =jdbc:h2:mem:test
+spring.datasource.username = sa
+spring.datasource.password =
+spring.datasource.driverClassName = org.h2.Driver
 
+#spring.jpa.hibernate.ddl-auto=validate
+
+spring.h2.console.enabled=true
+
+server.error.include-stacktrace=never
+server.port=8282
