--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.datasource.driverClassName = org.h2.Driver
 
 spring.h2.console.enabled=true
 
+spring.data.mongodb.port=37017
+spring.data.mongodb.host=localhost
+
 server.error.include-stacktrace=never
 server.port=8282
