--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.driverClassName = org.h2.Driver
 #spring.jpa.hibernate.ddl-auto=validate
 
 spring.h2.console.enabled=true
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 spring.data.mongodb.port=37017
 spring.data.mongodb.host=localhost
